quick hack to fix overflow of slider - MUST REVISIT

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -128,7 +128,7 @@ a.brand-subtext{
 .carousel-control .icon-next, 
 .carousel-control .glyphicon-chevron-left,
 .carousel-control .glyphicon-chevron-right{
-  top: 89%;
+  display: none;
 }
 
 .carousel-inner > .item > img, 
